import org.apache.tools.ant.filters.ReplaceTokens
import org.apache.tools.ant.taskdefs.condition.Os

plugins {
    id 'application'
    id 'java'
    id 'com.gradleup.shadow' version '9.4.1'
    id 'io.github.jwharm.flatpak-gradle-generator' version '1.7.0'
    id 'com.adarshr.test-logger' version '4.0.0'
}

repositories {
    maven { url './offline-repository/' }
//    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
    mavenCentral()
    google()
}

def javagiVersion = "0.15.0"
def recordBuilderVersion = "52"
def moshiVersion = "1.15.2"

dependencies {
    implementation "org.java-gi:gtk:$javagiVersion"
    implementation "org.java-gi:adw:$javagiVersion"
    implementation "org.java-gi:gstreamer:$javagiVersion"
    implementation "org.java-gi:secret:$javagiVersion"
    implementation("org.xerial:sqlite-jdbc:3.53.0.0")

    implementation 'net.beardbot:subsonic-client:0.6.0'
    implementation "com.github.ben-manes.caffeine:caffeine:3.2.3"
    implementation 'com.squareup.okhttp3:okhttp:5.3.2'
    implementation "com.squareup.moshi:moshi:$moshiVersion"
    implementation "com.squareup.moshi:moshi-adapters:$moshiVersion"
    implementation 'com.zaxxer:HikariCP:7.0.2'
    implementation 'com.google.code.gson:gson:2.14.0'
    implementation 'de.androidpit:color-thief:1.1.2'
    implementation 'io.reactivex.rxjava3:rxjava:3.1.12'
    implementation 'com.github.akarnokd:rxjava3-fiber-interop:0.0.18'
    compileOnly 'com.github.akarnokd:rxjava3-jdk9-interop:3.0.1'
    implementation 'com.softwaremill.jox:channels:1.1.2'
    implementation 'com.github.hypfvieh:dbus-java-core:5.2.0'
    implementation 'com.github.hypfvieh:dbus-java-transport-native-unixsocket:5.2.0'

    annotationProcessor "io.soabase.record-builder:record-builder-processor:$recordBuilderVersion"
    compileOnly "io.soabase.record-builder:record-builder-core:$recordBuilderVersion"

    implementation 'org.jspecify:jspecify:1.0.0'

    implementation 'org.slf4j:slf4j-api:2.0.17'
    implementation 'org.slf4j:jul-to-slf4j:2.0.17'
    implementation 'org.slf4j:jul-to-slf4j:2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.32'

    implementation 'com.twelvemonkeys.imageio:imageio-core:3.13.1'
    implementation 'com.twelvemonkeys.imageio:imageio-metadata:3.13.1'
    implementation 'com.twelvemonkeys.imageio:imageio-webp:3.13.1'

    testImplementation 'org.assertj:assertj-core:3.27.7'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.mockito:mockito-core:5.23.0'
    testImplementation 'com.squareup.okhttp3:mockwebserver3:5.3.2'
}

// copy the Constants class and replace the version placeholder with the application version
tasks.register("processVersion", Copy) {
    from("src/main/java/org/subsound/configuration/constants/") {
        include("Constants.java")
        filter(ReplaceTokens, tokens: ['version': version])
    }
    into layout.buildDirectory.dir("generated/sources/classes/src/java/main/org/subsound/configuration/constants/")

    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

processResources {
    inputs.property("version", version)
    filesMatching("app/io.github.subsoundorg.Subsound.metainfo.xml") {
        filter(ReplaceTokens, tokens: ['version': version])
    }
}

// exclude the original Constants class from the source set so gradle doesn't compile it in
sourceSets {
    main {
        java {
            exclude ("org/subsound/configuration/constants/Constants.java")
        }
        resources {
            exclude("samples/*")
        }
    }
}

// include the new Constants class that was previously generated
tasks.named("compileJava", JavaCompile) {
    dependsOn("processVersion")
    source(layout.buildDirectory.dir("generated/sources/classes/src/java/main/org/subsound/configuration/constants/"))
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

test {
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
    useJUnit()
}

testlogger {
    theme 'standard'
    showExceptions true
    showCauses true
    showStackTraces true
    showFullStackTraces true
    showStandardStreams true
    showPassedStandardStreams false
    showSkippedStandardStreams false
    showFailedStandardStreams true
    slowThreshold 2000
    showSummary true
    showPassed true
    showSkipped true
    showFailed true
}

tasks.named('run') {
    //jvmArgs += "-XstartOnFirstThread"
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
    jvmArgs += "-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu "
    //jvmArgs += "-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu:/opt/homebrew/lib "
}

tasks.flatpakGradleGenerator {
    outputFile = file('flatpak-sources.json')
    downloadDirectory = './offline-repository'
    //excludeConfigurations = ['testCompileClasspath', 'testRuntimeClasspath']
}

application {
    applicationName = "Subsound"
    mainClass = "org.subsound.Main"

    // Allow native access
    applicationDefaultJvmArgs += "--enable-native-access=ALL-UNNAMED"

    // Prevent AWT GraphicsEnvironment deadlock on macOS where AppKit main thread is occupied by GTK
    applicationDefaultJvmArgs += "-Djava.awt.headless=true"

    // Add common library directories to the library lookup path
    if (Os.isFamily(Os.FAMILY_MAC))
        applicationDefaultJvmArgs += [
                "-Djavagi.path=/opt/homebrew/lib",
                "-XstartOnFirstThread"
        ]
    else if (Os.isFamily(Os.FAMILY_WINDOWS))
        applicationDefaultJvmArgs += [
                "-Djavagi.path=C:/msys64/mingw64/bin"
        ]
    else
        applicationDefaultJvmArgs += [
                "-Djavagi.path=/usr/lib/x86_64-linux-gnu:/lib64:/usr/lib64:/lib:/usr/lib"
        ]
}

shadowJar {
    archiveClassifier = "final"
}
